--- a/index.html
+++ b/index.html
@@ -3,24 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <title>Public Page</title>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <div id="lastReset" style="position:absolute; top:0; left:0;"></div>
   <h1 id="kamatna">Kamatna stopa na 24 časa: </h1>
   <h2 id="dugovi">Tvoji dugovi: </h2>
 
-  <button onclick="netlifyIdentity.open()">Login</button>
-
   <script>
-    netlifyIdentity.init();
+    // Supabase client setup
+    const supabaseUrl = 'https://YOUR_PROJECT_URL.supabase.co';
+    const supabaseKey = 'YOUR_ANON_KEY';
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    async function fetchValues(){
-      const res = await fetch('/.netlify/functions/getValues');
-      const data = await res.json();
-      document.getElementById('kamatna').innerText = `Kamatna stopa na 24 časa: ${data.kamatnaStopa} %`;
+    async function fetchValues() {
+      let { data, error } = await supabase
+        .from('debt_tracker')
+        .select('*')
+        .eq('id', 1)
+        .single();
+
+      if (error) {
+        console.error(error);
+        return;
+      }
+
+      document.getElementById('kamatna').innerText = `Kamatna stopa na 24 časa: ${data.kamatna_stopa} %`;
       document.getElementById('dugovi').innerText = `Tvoji dugovi: ${data.dugovi} RSD`;
-      document.getElementById('lastReset').innerText = `Poslednji reset duga: ${data.lastReset}`;
+      document.getElementById('lastReset').innerText = `Poslednji reset duga: ${data.last_reset}`;
     }
 
     fetchValues();
