--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin Page</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <h1>Admin Panel</h1>
@@ -15,79 +14,104 @@
     <button onclick="login()">Login</button>
   </div>
 
+  <!-- Admin controls -->
   <div id="adminControls" style="display:none;">
     <div>
       <label>Increase debt: </label>
-      <input id="increaseAmount" type="number" />
+      <input id="increaseAmount" type="number">
       <button onclick="increaseDugovi()">Increase</button>
     </div>
-
     <div>
       <label>Change interest (%): </label>
-      <input id="newKamatna" type="number" />
+      <input id="newKamatna" type="number">
       <button onclick="changeKamatna()">Change</button>
     </div>
-
     <div>
       <button onclick="resetDugovi()">Reset Debt</button>
     </div>
   </div>
 
-  <script>
-    const supabaseUrl = 'https://YOUR_PROJECT_URL.supabase.co';
-    const supabaseKey = 'YOUR_ANON_KEY';
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  const supabaseUrl = 'https://yvpjltawuapxjalmdnbx.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl2cGpsdGF3dWFweGphbG1kbmJ4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY2NjQ2ODEsImV4cCI6MjA3MjI0MDY4MX0.4sP4Pe670KGziaodL9E_ZxftwvNYSzXORsSFDUVZ5f8';
+  const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
 
-    async function login() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+  async function login() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
-      const { data, error } = await supabase.auth.signInWithPassword({ email, password });
-      if (error) {
-        alert('Login failed: ' + error.message);
-        return;
-      }
+    const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+    console.log('Login response:', data, error);
+    if (error) { alert('Login failed: ' + error.message); return; }
 
-      document.getElementById('loginDiv').style.display = 'none';
-      document.getElementById('adminControls').style.display = 'block';
-    }
+    document.getElementById('loginDiv').style.display = 'none';
+    document.getElementById('adminControls').style.display = 'block';
+  }
 
-    async function fetchValues() {
-      let { data, error } = await supabase
+  async function fetchValues() {
+    try {
+      const { data, error } = await supabaseClient
         .from('debt_tracker')
         .select('*')
         .eq('id', 1)
         .single();
 
-      if (error) { console.error(error); return; }
+      if (error) throw error;
       return data;
+    } catch (err) {
+      console.error('[Admin] Fetch error:', err);
+      return null;
     }
+  }
 
-    async function increaseDugovi() {
-      const amount = parseFloat(document.getElementById('increaseAmount').value);
-      await supabase
-        .from('debt_tracker')
-        .update({ dugovi: supabase.raw('dugovi + ?', [amount]) })
-        .eq('id', 1);
-      alert('Debt updated!');
-    }
+  async function increaseDugovi() {
+    const amount = parseFloat(document.getElementById('increaseAmount').value);
+    const row = await fetchValues();
+    if (!row) return;
 
-    async function changeKamatna() {
-      const newRate = parseFloat(document.getElementById('newKamatna').value);
-      await supabase
-        .from('debt_tracker')
-        .update({ kamatna_stopa: newRate })
-        .eq('id', 1);
-      alert('Interest updated!');
-    }
+    const newDugovi = row.dugovi + amount;
 
-    async function resetDugovi() {
-      await supabase
-        .from('debt_tracker')
-        .update({ dugovi: 0, last_reset: new Date().toISOString().split('T')[0] })
-        .eq('id', 1);
-      alert('Debt reset!');
-    }
-  </script>
+    const { data, error } = await supabaseClient
+      .from('debt_tracker')
+      .update({ dugovi: newDugovi })
+      .eq('id', 1)
+      .select()
+      .single(); // <-- return updated row
+
+    if (error) { console.error(error); return; }
+    console.log('Updated debt:', data);
+    alert('Debt updated!');
+  }
+
+  async function changeKamatna() {
+    const newRate = parseFloat(document.getElementById('newKamatna').value);
+
+    const { data, error } = await supabaseClient
+      .from('debt_tracker')
+      .update({ kamatna_stopa: newRate })
+      .eq('id', 1)
+      .select()
+      .single();
+
+    if (error) { console.error(error); return; }
+    console.log('Updated interest:', data);
+    alert('Interest updated!');
+  }
+
+  async function resetDugovi() {
+    const { data, error } = await supabaseClient
+      .from('debt_tracker')
+      .update({ dugovi: 0, last_reset: new Date().toISOString().split('T')[0] })
+      .eq('id', 1)
+      .select()
+      .single();
+
+    if (error) { console.error(error); return; }
+    console.log('Debt reset:', data);
+    alert('Debt reset!');
+  }
+</script>
+
 </body>
 </html>
